Added Color Messages for Standard Error

--- a/src/commandpromptui/FXMLDocument.fxml
+++ b/src/commandpromptui/FXMLDocument.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="509.0" prefWidth="506.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="commandpromptui.FXMLDocumentController">
+<AnchorPane fx:id="mainWindow" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="509.0" prefWidth="506.0" style="-fx-background-color: #00ff00;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="commandpromptui.FXMLDocumentController">
     <children>
       <AnchorPane fx:id="loopWindow" layoutY="68.0" prefHeight="334.0" prefWidth="305.0" style="-fx-background-color: #3d4956;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="68.0">
          <children>
